# AI_Project

./: .gitignore  Cargo.toml  requirements-sidecar.txt
cmd/cli-agent/: Cargo.toml
cmd/cli-agent/src/: environment.rs  execute.rs  ipc.rs  lib.rs  main.rs  path_validate.rs  pipeline.rs  policy.rs  sidecar_signal.rs  signals.rs  storage.rs  validate.rs
config/: seed_data.sql  shell_hook.zsh
docs/: final_interface.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md
src/: lib.rs
src/sidecar/: __init__.py  cache.py  daemon.py  gateway.py  llm_client.py  search.py
tests/: integration_tests.rs
