[package]
name = "cli-agent"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "cli_agent"
path = "src/lib.rs"

[[bin]]
name = "cli-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
nix = { version = "0.29", features = ["process", "user", "hostname"] }
rusqlite = { version = "=0.31.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1.1"
signal-hook = "0.3"
thiserror = "1"
uuid = { version = "=1.8.0", features = ["v4", "serde"] }
